src/test/contracts/negative/deep_pattern_matching/pm_fail14.religo
let main = (_ : (unit, unit)) : (list(operation), unit) =>
  let () = 42n;
  ([] : list(operation), ())
